kyverno-tests/pss/resources/bad-hostpath-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-hostpath-pod
  namespace: fintech-workloads
spec:
  containers:
    - name: app
      image: busybox:1.36
      volumeMounts:
        - name: host
          mountPath: /host
  volumes:
    - name: host
      hostPath:
        path: /var/run
