kyverno-tests/pss/resources/bad-low-port-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-low-port-pod
  namespace: fintech-workloads
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
    - name: app
      image: busybox:1.36
      ports:
        - containerPort: 80
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        readOnlyRootFilesystem: true
        privileged: false
        capabilities:
          drop:
            - ALL
