kyverno-tests/pss/resources/bad-privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-privileged-pod
  namespace: fintech-workloads
spec:
  containers:
    - name: app
      image: busybox:1.36
      command: ["sleep", "3600"]
      securityContext:
        privileged: true
